--- a/public/index.html
+++ b/public/index.html
@@ -673,6 +673,7 @@
   <!-- owl carousel script 
     -->
   <script type="text/javascript">
+   
     $(".owl-carousel").owlCarousel({
       loop: true,
       margin: 0,
@@ -689,6 +690,13 @@
         }
       }
     });
+    // let body = document.querySelector('body');
+    // let bodyData = body.innerHTML;
+    // //put a logo image in cener of screen for 10 seconds
+    // body.innerHTML= '<div style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: #ffffff; z-index: 99999 !important; display: flex; justify-content: center; align-items: center;"><img src="images/new-logo.png" alt="DevQueue" style="width: 200px; height: auto;"></div>' + body.innerHTML;
+    // setTimeout(() => {
+    //   body.innerHTML = bodyData.replace(/DevQueue/g, '<span style="color: #ff0000;"><i>DevQueue</i></span>');
+    // }, 1000);
   </script>
   <!-- end owl carousel script -->
 
